# document-parser

./: .dockerignore  .env  .env.production  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  poetry.txt  pyproject.toml
app/: main.py  settings.py
app/api/: routers.py
app/modules/cloud_manager/: service.py
app/modules/cloud_manager/abc/: abc.py
app/modules/parser/: schemas.py
app/modules/parser/v1/: exceptions.py  router.py  schemas.py  service.py  utils.py
app/modules/parser/v1/abc/: abc.py  factory.py
app/modules/parser/v1/file_parsers/: __init__.py  docx_parser.py  html_parser.py  image_parser.py  pdf_parser.py  pdf_parser_vlm.py  pptx_parser.py  txt_parser.py  xlsx_parser.py
app/modules/parser/v2/: router.py  service.py  utils.py
app/modules/resource_manager/: schemas.py  service.py
app/modules/translator/v1/: exceptions.py  router.py  schemas.py  service.py  utils.py
app/modules/translator/v1/abc/: abc.py
app/modules/translator/v2/: router.py  schemas.py  service.py
app/modules/watchtower/: schemas.py  service.py
app/modules/webhook_manager/: schemas.py  service.py
app/modules/webhook_manager/abc/: abc.py
app/modules/webhook_manager/schemas/: tasks.py
app/parser/: exceptions.py  router.py  schemas.py  service.py  utils.py
docs/: Context.drawio
documents/: docx.docx
