[project]
name = "document-parser"
version = "0.3.1"
description = "Service for parse and processing popular types documents"
authors = [
    {name = "YourCarma"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "uvicorn[standard]>=0.34.2,<0.35.0",
    "fastapi[standard]>=0.115.12,<0.116.0",
    "python-multipart>=0.0.20,<0.0.21",
    "pydantic-settings>=2.9.1,<3.0.0",
    "docling>=2.36.1,<3.0.0",
    "ultralytics>=8.3.152,<9.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "docling-core>=2.44.2,<3.0.0",
    "loguru>=0.7.3,<0.8.0",
    "aiofiles>=24.1.0,<25.0.0",
    "docx2md>=1.0.4,<2.0.0",
    "chardet>=5.2.0,<6.0.0",
    "sentry-sdk (>=2.42.1,<3.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "iso639-lang (>=2.6.3,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"